# amazon-invoice-dl

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/amazon_invoice_dl/: __init__.py  cli.py  period.py
tests/: test_period.py
