[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-invoice-dl"
version = "1.0.0"
description = "Download all invoices from your Amazon.de account as PDF"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Chris Schömer", email = "schoemer@runbox.com" },
]
keywords = ["amazon", "invoice", "download", "pdf", "germany"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "playwright>=1.40",
]

[project.scripts]
amazon-invoice-dl = "amazon_invoice_dl.cli:main"

[project.urls]
Homepage = "https://github.com/wizz-cmd/amazon-invoice-dl"
Repository = "https://github.com/wizz-cmd/amazon-invoice-dl"
Issues = "https://github.com/wizz-cmd/amazon-invoice-dl/issues"
